--- a/app/views/items/index.html.erb
+++ b/app/views/items/index.html.erb
@@ -1,7 +1,5 @@
 <%= render "shared/header" %>
 <div class='main'>
-
-  <%# 画面上部の「人生を変えるフリマアプリ」帯部分 %>
   <div class='title-contents'>
     <h2 class='service-title'>
       人生を変えるフリマアプリ
@@ -17,9 +15,6 @@
       <%= link_to image_tag("google-play.png", class:"google-btn"), "#" %>
     </div>
   </div>
-  <%# //画面上部の「人生を変えるフリマアプリ」帯部分  %>
-
-  <%# FURIMAが選ばれる3つの理由部分 %>
   <div class='select-reason-contents'>
     <h2 class='title'>
       FURIMAが選ばれる3つの理由
@@ -60,9 +55,6 @@
       </li>
     </ul>
   </div>
-  <%# //FURIMAが選ばれる3つの理由部分 %>
-
-  <%# 画面中央の「会員数日本一位」帯部分 %>
   <div class='ad-contents'>
     <h2 class='ad-title'>
       会員数日本一位
@@ -81,9 +73,6 @@
       <%= link_to image_tag("google-play.png", class:"google-btn"), "#" %>
     </div>
   </div>
-  <%# //画面中央の「会員数日本一位」帯部分 %>
-
-  <%# FURIMAの特徴 %>
   <div class='feature-contents'>
     <h2 class='title'>
       FURIMAの特徴
@@ -118,9 +107,6 @@
       </li>
     </ul>
   </div>
-  <%# //FURIMAの特徴 %>
-
-  <%# 商品一覧 %>
   <div class='item-contents'>
     <h2 class='title'>ピックアップカテゴリー</h2>
     <div class="subtitle" >
@@ -133,13 +119,11 @@
         <%= link_to item_path(item) do %>
         <div class='item-img-content'>
           <%= image_tag item.image, class: "item-img" %>
-          <%# sold outの表示 %>
-          <%# 購入済みの場合、条件分岐 %>
+          <% if item.order.present? %>
           <div class='sold-out'>
             <span>Sold Out!!</span>
           </div>
-          <%# //購入済みの場合、条件分岐 %>
-          <%# //sold outの表示 %>
+          <%end%>
         </div>
         <div class='item-info'>
           <h3 class='item-name'>
@@ -157,7 +141,6 @@
       </li>
       <% end %>
       <% end %>
-      <%# 商品がない場合のダミー %>
       <% if @items.length == 0%>
       <li class='list'>
         <%= link_to '#' do %>
@@ -177,10 +160,8 @@
         <% end %>
       </li>
       <% end %>
-      <%# //商品がない場合のダミー %>
     </ul>
   </div>
-  <%# //商品一覧 %>
 </div>
 <%= link_to(new_item_path, class: 'purchase-btn') do %>
   <span class='purchase-btn-text'>出品する</span>
