クレジットカード決済機能実装

--- a/app/views/orders/index.html.erb
+++ b/app/views/orders/index.html.erb
@@ -25,7 +25,10 @@
         ¥<%= @item.price %>
       </p>
     </div>
-    <%= form_with model: @order_address, url: item_orders_path, id: 'charge-form', class: 'transaction-form-wrap',local: true do |f| %>
+
+    <%= include_gon %>
+    
+    <%= form_with model: @order_address, url: item_orders_path,data: { turbo: false }, id: 'charge-form', class: 'transaction-form-wrap',local: true do |f| %>
     <%= render 'shared/error_messages', model: f.object %>
     <div class='credit-card-form'>
       <h1 class='info-input-haedline'>
